--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^1.9.1",
     "material": "^0.3.13",
     "ng2-charts": "^2.3.0",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
