--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^8.0.1",
     "@angular/cdk": "^8.0.1",
     "@angular/common": "~8.0.1",
@@ -26,7 +27,7 @@
     "jquery": "^1.9.1",
     "material": "^0.3.13",
     "ng2-charts": "^2.3.0",
-    "popper.js": "^1.14.7",
+    "ngx-toastr": "^10.0.4",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
