--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^1.9.1",
     "material": "^0.3.13",
     "ng2-charts": "^2.3.0",
+    "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^10.0.4",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
