--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "chartjs-chart-box-and-violin-plot": "^2.1.0",
     "jquery": "^1.9.1",
     "material": "^0.3.13",
     "ng2-charts": "^2.3.0",
